# CMSIS-FreeRTOS

./: .clang-tidy  CMakeLists.txt
.github/: CODEOWNERS
CMSIS/RTOS2/FreeRTOS/: CMakeLists.txt
CMSIS/RTOS2/FreeRTOS/Include/: cmsis_os2_control_blocks.h  os2_control_blocks.h
CMSIS/RTOS2/FreeRTOS/Include1/: cmsis_os2.h
CMSIS/RTOS2/FreeRTOS/Source/: cmsis_os2.c
Source/: CMakeLists.txt  include.cmake
Source/include/: CMakeLists.txt
Source/portable/: CMakeLists.txt
Source/portable/GCC/ARM_CM33/non_secure/: port.c  portasm.c
